# json-schema

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  NEWS.md  README.md  TODO.md  json-schema.pc.in
json/: CMakeLists.txt  Pointer.cc  Pointer.h  SchemaValidator.cc  SchemaValidator.h  URI.cc  URI.h  convert-meta-schema.sh  meta-schema.cc
src/: CMakeLists.txt  json-pointer.cc  json-validate.cc
test/: CMakeLists.txt  NiHTest.pm  runtest.in  test-uri.cc  test-validate.cc
test/defaults/: schema.json  t001-direct.json  t001-direct.test  t002-direct-override.json  t002-direct-override.test  t003-fail.json  t003-fail.test  t004-in-object.json  t004-in-object.test  t005-in-array.json  t005-in-array.test  t006-reference.json  t006-reference.test  t007-if-then.json  t007-if-then.test  t008-if-else.json  t008-if-else.test  t009-all-of.json  t009-all-of.test  t010-any-of-some.json  t010-any-of-some.test  t011-any-of-all.json  t011-any-of-all.test  t012-one-of-1.json  t012-one-of-1.test  t013-one-of-2.json  t013-one-of-2.test  t014-one-of-3.json  t014-one-of-3.test
test/p-option/: fits_schema_root.json  fits_subschema_author.json  fits_subschema_books.json  fits_subschema_cookbooks.json  fits_subschema_summer.json  fits_type_string.json  overview.txt  schema.json  t001.test  t002.test  t003.test  t004.test  t010.test  t011.test  t020.test  t021.test  t022.test  t030.test  t031.test  t050.test  t051.test  t052.test  t060.test  t061.test  t070.test  t071.test
xcode/json-schema.xcodeproj/: project.pbxproj
xcode/json-schema.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
