LINK_DIRECTORIES(${JSONCPP_LIBRARY_DIRS} ${PCRECPP_LIBRARY_DIRS})

SET(PROGRAMS
  json-pointer
  json-validate
  )

INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIRS} ${PCRECPP_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/..)

FOREACH(PROGRAM ${PROGRAMS})
  ADD_EXECUTABLE(${PROGRAM} ${PROGRAM})
  TARGET_LINK_LIBRARIES(${PROGRAM} json-schema ${JSONCPP_LIBRARIES} ${PCRECPP_LIBRARIES})
ENDFOREACH()
